[project]
name = "yozm-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.70.0",
    "python-dotenv>=1.0.1",
    "rich>=14.0.0",
    "tenacity>=8.2.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
]
