[project]
name = "yozm-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.3",
    "duckduckgo-search>=8.0.2",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.23",
    "langchain[anthropic,openai]>=0.3.24",
    "numpy>=2.2.6",
    "openai>=1.70.0",
    "openai-agents>=0.0.12",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "tenacity>=8.2.3",
    "tiktoken>=0.9.0",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
]
